Version 1.0.3

    - Fix misnamed SimpleShell method: newExecSession() -> newShellSession().
    - Add support for jar: URLs in MemoryLoaderDelegate.addToClasspath().

Version 1.0.2 Released October 23, 2023

    - A good bit of refactoring overall.
    - A few improvements to JShell support.
    - Replaced CommandRegistry with CommandBundle.

Version 1.0.1 Released Aug 12, 2023

    - Add new subclass hook method SubshellCommand.executeSubshell().
    - Allow SSH host key to be configured via classpath resource.
    - Add local context class loading workaround to JShellCommand.

Version 1.0.0 Released Aug 9, 2023

    - Initial release